# Youtube-API-ETL_Front_End

./: README.md  main.py  pyproject.toml
Youtube_API_ETL/: apps.py  models.py  urls.py  views.py
Youtube_API_ETL/templates/: PlaylistId.html  video_details.html  video_list.html
config/: settings.py  urls.py
templates/: default.html
